KC-1172: Get folder persons documents implementation.
