# config/packages/nelmio_api_doc.yaml
@@ -171,6 +171,36 @@ nelmio_api_doc:
                                 source:
                                   type: string
                                   example: "IMPORT"
+        SuccessFolderPersonsDocuments:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    name:
+                      type: string
+                      example: "John"
+                    type:
+                      type: integer
+                      example: 51
+                    status:
+                      type: string
+                      example: pending
+                    uid:
+                      type: string
+                      example: "5c3479c5eec12"
+                    documentId:
+                      type: integer
+                      example: 12345
+                    documenStatus:
+                      type: integer
+                      example: 1
+                    personId:
+                      type: integer
+                      example: 123
         Unauthenticated:
           description: Authentication failed
           content:
@@ -298,6 +328,21 @@ nelmio_api_doc:
             '200':
               description: OK
               ref: '#/components/responses/SuccessFolderPersons'
+            '404':
+              ref: '#/components/responses/NotFound'
+            '500':
+              ref: '#/components/responses/ServerError'
+      /api/v1/folders/{id}/documents:
+        get:
+          summary: Get the folder persons documents informations based on the folder id
+          tags:
+            - Folders
+          parameters:
+            - ref: '#/components/parameters/id'
+          responses:
+            '200':
+              description: OK
+              ref: '#/components/responses/SuccessFolderPersonsDocuments'
             '404':
               ref: '#/components/responses/NotFound'
             '500':
